Fix padding and add gap for ul

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -59,4 +59,6 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  padding: 0;
+  gap: 15px;
 }
